# rpi-api

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: authhandler.hpp  router.hpp
include/handler/: auth.hpp
include/middleware/: auth.hpp
include/service/: auth.hpp
src/: authhandler.cpp  main.cpp
src/handler/: auth.cpp
src/middleware/: auth.cpp
src/service/: auth.cpp
